--- a/index.html
+++ b/index.html
@@ -1249,7 +1249,7 @@
                     <i class="fab fa-twitter"></i>
                     <span>Twitter</span>
                 </a>
-                <a href="mailto:contact@anubhavmohandas.com" class="contact-link">
+                <a href="mailto:anubhav.manav147@gmail.com" class="contact-link">
                     <i class="fas fa-envelope"></i>
                     <span>Email</span>
                 </a>
@@ -1618,7 +1618,7 @@
 
         function triggerEasterEgg() {
             characterGuide.showMessage("🎉 Konami Code activated! You found the secret! 🎉");
-            document.body.style.animation = 'rainbow 2s ease-in-out';
+            document.body.style.animation = 'rainbow 4s ease-in-out';
             
             const style = document.createElement('style');
             style.textContent = `
